--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 
 header {
-  background-color: #9A0794;
+  background-color: #12C0BA;
   grid-area: 1/1/2/4;
   font-family: Verdana;
 }
@@ -20,7 +20,7 @@ header {
   display: flex; 
   flex-wrap: wrap;
   flex-direction: column;
-  background-color:#D4F7EC;
+  background-color:#DBDEB9;
   grid-area: 2/2/6/4;
   align-items: left;
 
@@ -48,13 +48,13 @@ header {
   color: #FCBA12;
 }
 .image{
-  width:85%; 
-  height:85%;
+  width:100%; 
+  height:100%;
   margin-left: auto;
   margin-right: auto;
   border-radius: 60%;
   display: block;
-  margin-top: 50px;  
+  margin-top: 70px;  
 }
 
 .Work,.Education,.Biography{
@@ -85,6 +85,6 @@ a:visited {
 }
 .image{
   float: left;
-  width:7%; 
-  height:7%;
+  width:70%; 
+  height:70%;
 }
